--- a/advanced/jobs/J33898.md
+++ b/advanced/jobs/J33898.md
@@ -15,4 +15,4 @@ items: Jobs
 | Records per iteration | 1000                                                                                      |
 | Version               | Introduced:                                                                               |
 
-To learn more about the documentation template and get a short explanation for each table column, see [Jobs documentation template](..jobs/template.md).
+To learn more about the documentation template and get a short explanation for each table column, see [Jobs documentation template](template.md).
