--- a/advanced/jobs/J30632.md
+++ b/advanced/jobs/J30632.md
@@ -10,9 +10,12 @@ items: Jobs
 | Entity                | **[Communities.Notifications](https://docs.erp.net/model/entities/Communities.Notifications.html)**                              |
 | Job type name         | Deletе old notifications                                     |
 | Parameters            | -                                                            |
-| Description           | The system job deletes all old notifications, whose CreationTimeUtc is older than 7 days:(CreationTimeUtc - Now()) > 7 days |
+| Description           | The system job deletes all old notifications, whose CreationTimeUtc is older than 7 days:(Now() - CreationTimeUtc) > 7 days |
 | First to process      | Notification.CreationTimeUtc (ASC)                           |
 | Records per iteration | 10 000                                                       |
-| Version               | Introduced: 2020.1                                           |
+| Automatically created | YES                                                          |
+| Version               | Introduced: 2020.1<br> Updated: 2023 <br>                    |
+|                       | /- the condition for deleting old notifications is changed – from older than 32 to older than 7 days <br>|
+|                       | /- the job is automatically created and activated into the databases|
 
 To learn more about the documentation template and get a short explanation for each table column, <br> see @template-description-jobs.
