--- a/advanced/jobs/J30632.md
+++ b/advanced/jobs/J30632.md
@@ -14,8 +14,6 @@ items: Jobs
 | First to process      | Notification.CreationTimeUtc (ASC)                           |
 | Records per iteration | 10 000                                                       |
 | Automatically created | YES                                                          |
-| Version               | Introduced: 2020.1<br> Updated: 2023 <br>                    |
-|                       | /- the condition for deleting old notifications is changed – from older than 32 to older than 7 days <br>|
-|                       | /- the job is automatically created and activated into the databases|
+| Version               | Introduced: 2020.1<br> Updated: 2023 <br> \- the condition for deleting old notifications is changed – from older than 32 to older than 7 days <br> \- the job is automatically created and activated into the databases|
 
 To learn more about the documentation template and get a short explanation for each table column, <br> see @template-description-jobs.
