--- a/advanced/jobs/J33898.md
+++ b/advanced/jobs/J33898.md
@@ -13,6 +13,7 @@ items: Jobs
 | Description           | The system job deletes all old document versions, whose UpdateTime is older than 60 days:<br/> (Today - UpdateTime.Date()) > 60 days |
 | First to process      | DocumentVersion.UpdateTime (ASC)                                                          |
 | Records per iteration | 1000                                                                                      |
+| Automatically created | YES                                                                                       |
 | Version               | Introduced:                                                                               |
 
 To learn more about the documentation template and get a short explanation for each table column, see [Jobs documentation template](template.md).
