--- a/advanced/jobs/J33898.md
+++ b/advanced/jobs/J33898.md
@@ -10,7 +10,7 @@ items: Jobs
 | Entity                | **[General.DocumentVersions Entity](xref:General.DocumentVersions)**                      |
 | Job type name         | Delete Old Document Versions                                                              |
 | Parameters            | \-                                                                                        |
-| Description           | The system job deletes all old document versions, whose UpdateTime is older than 60 days:<br/> (Today - UpdateTime.Date()) > 60 days |
+| Description           | The system job deletes all old document versions, whose UpdateTime is older than 60 months:<br/> (Today - UpdateTime) > 60 months |
 | First to process      | DocumentVersion.UpdateTime (ASC)                                                          |
 | Records per iteration | 1000                                                                                      |
 | Automatically created | YES                                                                                       |
