--- a/advanced/jobs/J33898.md
+++ b/advanced/jobs/J33898.md
@@ -14,6 +14,6 @@ items: Jobs
 | First to process      | DocumentVersion.UpdateTime (ASC)                                                          |
 | Records per iteration | 1000                                                                                      |
 | Automatically created | YES                                                                                       |
-| Version               | Introduced:                                                                               |
+| Version               | Introduced: 2023                                                                          |
 
 To learn more about the documentation template and get a short explanation for each table column, see [Jobs documentation template](template.md).
