--- a/modules/logistics/wms/how-it-works/barcode-parsers/p02.md
+++ b/modules/logistics/wms/how-it-works/barcode-parsers/p02.md
@@ -26,8 +26,8 @@ If there is no matching line – it throws an error message.
 1. If the barcode starts with “(“ OR  it starts with “01 or 02 and the scanned barcode length is = 16 symbols”, then go to step 2. Else, go to step 10.
 2. Brake the barcode into segments. If the barcode starts with “(“ it is broken down directly, else it is parsed to a barcode with () segments. The recognized identifiers are specified in the table above, all other identifiers are ignored. Go to step 3.
 3. Make segment validations. 
-- It must contain one of the segments (01) or (02)
-- The barcode must not contain both segments (01) and (02) at the same time.
+- The barcode must contain one of the segments (01) or (02)
+- It must not contain both segments (01) and (02) at the same time.
 - If it contains segment (37) it must contain segment (02) as well
 If all validations are successful, go to step 4. Else, throw an error message and stop.
 4. Try to find a product with the same Part Number or additional Product Code as the scanned barcode. If the search is unsuccessful, then throw "Product not found.". Else go to step 5.
