--- a/modules/logistics/wms/how-it-works/barcode-parsers/p02.md
+++ b/modules/logistics/wms/how-it-works/barcode-parsers/p02.md
@@ -14,7 +14,7 @@ A list of the identifiers that are recognized by this parser:
 | (37) | Count of trade items | variable, up to 8 |
 
 Once triggered, the parser tries to break the GS1 barcode into separate parts to extract the information encoded in it. If there are no errors during this operation, it starts looking for an appropriate line that can be executed with the recognized information. When it finds the best matching line, it starts its execution. If the information is enough to fulfill the line, then the system will not ask the user for anything and will automatically execute the line. If there is missing information, then it will show the respective screens so the user can fill it in.
-If there is no matching line – it throws an error message.
+If there is no matching line – it throws an error message and stops the execution.
 
 ### Specifics and optimizations during the line execution:
 - If there is a specified Location in the line and there is no warehouse policy that requires scanning it – then the line is executed automatically with the specified location.
