--- a/advanced/jobs/J30903.md
+++ b/advanced/jobs/J30903.md
@@ -12,8 +12,8 @@ items: Jobs
 | Parameters            | DocumentPrintImage.DocumentPrints.Document.EnterpriseCompany.PrintImagesRetentionMonths |
 | Description           | Deletes old document print images whose retention period has expired. Expiration occurs when the period between the print time of the document image and today is larger than the period set in the *Print Images Retention Months* field in the enterprise company's definition. The default value for that field is 60 months but it can be adjusted according to the company's needs. |
 | First to process      | DocumentPrintImage.DocumentPrints.PrintTime (ASC)            |
-| Records per iteration | 1000                                                         |
-| Version               | Introduced: 2020.1                                           |
+| Automatically created | YES                                                          |
+| Version               | Introduced: 2020.1<br> Updated: 2024 - the job is automatically created and activated into the databases|
 
 > [!Note]
 > 
