--- a/advanced/jobs/J35026.md
+++ b/advanced/jobs/J35026.md
@@ -13,6 +13,6 @@ items: Jobs
 | Description           | The system job deletes all old information messages, whose InformationMessageTime is older than 12 months|
 | First to process      | InformationMessageTime (ASC)                                                          |
 | Automatically created | YES                                                                                       |
-| Version               | Introduced:                                                                           |
+| Version               | Introduced: v.24                                                                           |
 
 To learn more about the documentation template and get a short explanation for each table column, see [Jobs documentation template](template.md).
