--- a/advanced/jobs/J35666.md
+++ b/advanced/jobs/J35666.md
@@ -9,8 +9,8 @@ items: Jobs
 | :-------------------- | ------------------------------------------------------------ |
 | Entity                | **[Systems.Core.AttributeChanges](xref:Systems.Core.AttributeChanges)** |
 | Job type name         | Delete old history data for attribute changes                |
-| Parameters            | /TrackChanges/AttributeChangesRetentionMonths                |
-| Description           | Deletes old history data for attribute changes whose object changeset’s TimeUtc is older than 36 months.<br> The default value of 36 months can be adjusted according to the specific needs by configuring and setting a preferred value in the **/TrackChanges/AttributeChangesRetentionMonths** key. |
+| Parameters            | [**/TrackChanges/AttributeChangesRetentionMonths**](~/advanced/data-objects/track-changes.md) key |
+| Description           | Deletes old history data for attribute changes whose object changeset’s TimeUtc is older than 36 months.<br> The default value of 36 months can be adjusted according to the specific needs by configuring and setting a preferred value in the [**/TrackChanges/AttributeChangesRetentionMonths**](~/advanced/data-objects/track-changes.md) key. |
 | First to process      | AttributeChange.ObjectChange.ObjectChangeset.TimeUtc (ASC)   |
 | Automatically created | YES                                                          |
 | Version               | Introduced: v.24                                             |
