--- a/advanced/jobs/J35666.md
+++ b/advanced/jobs/J35666.md
@@ -9,14 +9,17 @@ items: Jobs
 | :-------------------- | ------------------------------------------------------------ |
 | Entity                | **[Systems.Core.AttributeChanges](xref:Systems.Core.AttributeChanges)** |
 | Job type name         | Delete old history data for attribute changes                |
-| Parameters            | [**/TrackChanges/AttributeChangesRetentionMonths**](~/advanced/data-objects/track-changes.md) key |
-| Description           | Deletes old history data for attribute changes whose object changeset’s TimeUtc is older than 36 months.<br> The default value of 36 months can be adjusted according to the specific needs by configuring and setting a preferred value in the [**/TrackChanges/AttributeChangesRetentionMonths**](~/advanced/data-objects/track-changes.md) key. |
+| Parameters            | **/TrackChanges/AttributeChangesRetentionMonths** key         |
+| Description           | Deletes old history data for attribute changes whose object changeset’s TimeUtc is older than 36 months.<br> The default value of 36 months can be adjusted according to the specific needs by configuring and setting a preferred value in the **/TrackChanges/AttributeChangesRetentionMonths** key*. |
 | First to process      | AttributeChange.ObjectChange.ObjectChangeset.TimeUtc (ASC)   |
 | Automatically created | YES                                                          |
 | Version               | Introduced: v.24                                             |
 
+*To learn more about the **/TrackChanges/AttributeChangesRetentionMonths** key, see key №57 in [Config options](~/reference/config-options-reference.md).
+
 > [!Note]
 > 
 > The job will **NOT** delete information from the **Object Changes** and the **Object Changesets** tables. That means that the details regarding when and by whom the document or the definition has been changed will continue to be available. The job deletes only data related to the changed attributes and their updated values.
+
 
 To learn more about the documentation template and get a short explanation for each table column, <br> see @template-description-jobs.
