--- a/advanced/jobs/J35666.md
+++ b/advanced/jobs/J35666.md
@@ -8,7 +8,7 @@ items: Jobs
 | Code                  | J35666                                                       |
 | :-------------------- | ------------------------------------------------------------ |
 | Entity                | **[Systems.Core.AttributeChanges](xref:Systems.Core.AttributeChanges)** |
-| Job type name         | Delete old history data for attribute changes                |
+| Job type name         | Delete attribute changes history                             |
 | Parameters            | /TrackChanges/AttributeChangesRetentionMonths key            |
 | Description           | Deletes old history data for attribute changes whose object changeset’s TimeUtc is older than 36 months.<br> The default value of 36 months can be adjusted according to the specific needs by configuring and setting a preferred value in the **/TrackChanges/AttributeChangesRetentionMonths** key*. |
 | First to process      | AttributeChange.ObjectChange.ObjectChangeset.TimeUtc (ASC)   |
