--- a/advanced/jobs/J35666.md
+++ b/advanced/jobs/J35666.md
@@ -3,7 +3,7 @@ uid: jobs-J35666
 items: Jobs
 ---
 
-# J35666 Delete old history data for attribute changes
+# J35666 Delete attribute changes history
 
 | Code                  | J35666                                                       |
 | :-------------------- | ------------------------------------------------------------ |
