--- a/advanced/jobs/J30903.md
+++ b/advanced/jobs/J30903.md
@@ -19,4 +19,4 @@ items: Jobs
 > 
 > The job will **NOT** delete the information from the **Document Prints** panel/table. Information about when and by whom the document has been printed will continue to be available. The job deletes only the visual representation of the document that has been printed.
 
-To learn more about the documentation template and get a short explanation for each table column, <br> see @template-description-jobs..
+To learn more about the documentation template and get a short explanation for each table column, <br> see @template-description-jobs.
