--- a/advanced/jobs/J38417.md
+++ b/advanced/jobs/J38417.md
@@ -7,7 +7,7 @@ items: Jobs
 
 | Code                  | J38417                                                       |
 | :-------------------- | ------------------------------------------------------------ |
-| Entity                | **[Systems.Core.AuditLogEntries](xref:Systems.Core.AuditLogEntries)** |
+| Entity                | **[Systems.Monitoring.AuditLogEntries](xref:Systems.Monitoring.AuditLogEntries)** |
 | Job type name         | Delete old audit logs                                        |
 | Parameters            | /Monitoring/AuditLogEntriesRetentionMonths key               |
 | Description           | Deletes old audit log entries whose EventTimeUtc is older than 12 months.<br> The default value of 12 months can be adjusted according to the specific needs by configuring and setting a preferred value in the **/Monitoring/AuditLogEntriesRetentionMonths** key*. |
