--- a/advanced/jobs/J30903.md
+++ b/advanced/jobs/J30903.md
@@ -11,9 +11,9 @@ items: Jobs
 | Job type name         | Deletе Old Document Print Images                             |
 | Parameters            | DocumentPrintImage.DocumentPrints.Document.EnterpriseCompany.PrintImagesRetentionMonths |
 | Description           | Deletes old document print images whose retention period has expired. Expiration occurs when the period between the print time of the document image and today is larger than the period set in the *Print Images Retention Months* field in the enterprise company's definition. The default value for that field is 60 months but it can be adjusted according to the company's needs. |
-| First to process      | DocumentPrintImage.DocumentPrints.PrintTime (ASC)            |
+| First to process      | -            |
 | Automatically created | YES                                                          |
-| Version               | Introduced: 2020.1<br> Updated: 2024 - the job is automatically created and activated into the databases|
+| Version               | Introduced: 2020.1<br> Updated: 24 - the job is automatically created and activated into the databases <br> Updated: 24 SP9 - Sorting by DocumentPrintImage.DocumentPrints.PrintTime (ASC) has been removed for performance reasons. As a result, the job will no longer prioritize deleting the oldest records. Instead, any record that falls within the expired retention period might be deleted in the iteration, regardless of order. It is considered that the order of deleting of obsolete records is not important, especially in favor of the job's speed, the number of processed records, and overall efficiency.|
 
 > [!Note]
 > 
