--- a/advanced/jobs/J38458.md
+++ b/advanced/jobs/J38458.md
@@ -3,7 +3,7 @@ uid: jobs-J38458
 items: Jobs
 ---
 
-# J38458 Delete old information messages
+# J38458 Complete unfinished time entries
 
 | Code                  | J38458                                                      |
 | :-------------------- | ------------------------------------------------------------|
