--- a/advanced/jobs/J38458.md
+++ b/advanced/jobs/J38458.md
@@ -10,7 +10,7 @@ items: Jobs
 | Entity                | **Agile.Projects.TimeEntries Entity**                       |
 | Job type name         | Complete unfinished time entries                            |
 | Parameters            | \-                                                          |
-| Description           | The system job completes unfinished time entries whose Date is older than 1 day by setting in the End Time field the value: 23:59:00 
+| Description           | The system job completes unfinished time entries whose Date is at least one day old by setting the End Time field to 23:59:00.
 | First to process      | \-                                                          |
 | Automatically created | YES                                                         |
 | Version               | Introduced: v.25                                            |
