--- a/advanced/jobs/J38458.md
+++ b/advanced/jobs/J38458.md
@@ -7,7 +7,7 @@ items: Jobs
 
 | Code                  | J38458                                                      |
 | :-------------------- | ------------------------------------------------------------|
-| Entity                | **Agile.Projects.TimeEntries Entity**                       |
+| Entity                | **Projects.Agile.TimeEntries Entity**                       |
 | Job type name         | Complete unfinished time entries                            |
 | Parameters            | \-                                                          |
 | Description           | The system job completes unfinished time entries whose Date is at least one day old by setting the End Time field to 23:59:00.
