- MSSync added SyncJobs section - fixed compiler warnings

--- a/advanced/jobs/J33898.md
+++ b/advanced/jobs/J33898.md
@@ -7,7 +7,7 @@ items: Jobs
 
 | Code                  | J33898 |
 | :-------------------- | ------------------------------------------------------------|
-| Entity                | **[General.DocumentVersions Entity](xref:General.DocumentVersions)**                      |
+| Entity                | **[Systems.Core.DocumentVersions Entity](xref:Systems.Core.DocumentVersions)**                      |
 | Job type name         | Delete Old Document Versions                                                              |
 | Parameters            | \-                                                                                        |
 | Description           | The system job deletes all old document versions, whose UpdateTime is older than 60 months|
