--- a/modules/logistics/wms/how-it-works/barcode-parsers/p03.md
+++ b/modules/logistics/wms/how-it-works/barcode-parsers/p03.md
@@ -1,3 +1,7 @@
+---
+uid: P03
+---
+
 ## P03: GS1 – SSCC parser
 This parser is used for executing the Warehouse Order lines with the contents of a Logistic Unit (LU). 
 
