--- a/advanced/jobs/J35026.md
+++ b/advanced/jobs/J35026.md
@@ -7,7 +7,7 @@ items: Jobs
 
 | Code                  | J35026 |
 | :-------------------- | ------------------------------------------------------------|
-| Entity                | **[Systems.Core.InformationMessages Entity](xref:Systems.Core.InformationMessages)**      |
+| Entity                | **[Systems.Monitoring.InformationMessages Entity](xref:Systems.Monitoring.InformationMessages)**      |
 | Job type name         | Delete Old Information Messages                                                           |
 | Parameters            | \-                                                                                        |
 | Description           | The system job deletes all old information messages, whose InformationMessageTime is older than 12 months|
