--- a/advanced/jobs/J38722.md
+++ b/advanced/jobs/J38722.md
@@ -10,9 +10,7 @@ items: Jobs
 | Entity                | **Logistics.Inventory.StoreOrders Entity**                  |
 | Job type name         | Complete Old Store Orders                                   |
 | Parameters            | \-                                                          |
-| Description           | The system job completes with sub-documents store orders    |
-|                       | whose Document Date is older than the set Retention Period in comparison with Today.|
-|                       | By default the Retention period is two years.|
+| Description           | The system job completes with sub-documents store orders whose Document Date is older than the set Retention Period in comparison with Today. By default the Retention period is two years.|
 | First to process      | DocumentDate (ASC)                                          |
 | Automatically created | YES                                                         |
 | Version               | Introduced:                                                 |
