--- a/advanced/jobs/J38722.md
+++ b/advanced/jobs/J38722.md
@@ -9,9 +9,9 @@ items: Jobs
 | --------------------- | ------------------------------------------------------------|
 | Entity                | **Logistics.Inventory.StoreOrders Entity**                  |
 | Job type name         | Complete Old Store Orders                                   |
-| Parameters            | \-                                                          |
-| Description           | The system job completes with sub-documents store orders whose Document Date is older than the set Retention Period in comparison with Today. By default the Retention period is two years.|
-| First to process      | DocumentDate (ASC)                                          |
+| Parameters            | Systems.Config.Jobs.JobConfigurations                       |
+| Description           | The system job completes with sub-documents store orders whose Retention period has expired. Expiration occurs when the period between the Document date and Today is larger than the set retention period in years in field Job Configurations in the definition of the Job. By default the period is two years.|
+| First to process      | \-                                                          |
 | Automatically created | YES                                                         |
 | Version               | Introduced:                                                 |
 
