--- a/advanced/jobs/J38722.md
+++ b/advanced/jobs/J38722.md
@@ -10,7 +10,7 @@ items: Jobs
 | Entity                | **Logistics.Inventory.StoreOrders Entity**                  |
 | Job type name         | Complete Old Store Orders                                   |
 | Parameters            | Systems.Config.Jobs.JobConfigurations                       |
-| Description           | The system job completes with sub-documents store orders whose Retention period has expired. Expiration occurs when the period between the Document date and Today is larger than the set retention period in years in field Job Configurations in the definition of the Job. By default the period is two years.|
+| Description           | The system job completes with sub-documents store orders whose Retention period has expired. Expiration occurs when the period between the Document date and Today is larger than the set retention period in years in field Job Configurations in the definition of the Job. By default the period is two years. It can be adjusted to the company's needs.|
 | First to process      | \-                                                          |
 | Automatically created | YES                                                         |
 | Version               | Introduced:                                                 |
