--- a/advanced/jobs/J38722.md
+++ b/advanced/jobs/J38722.md
@@ -9,8 +9,8 @@ items: Jobs
 | --------------------- | ------------------------------------------------------------|
 | Entity                | **Logistics.Inventory.StoreOrders Entity**                  |
 | Job type name         | Complete Old Store Orders                                   |
-| Parameters            | Systems.Config.Jobs.JobConfigurations, <br/>where the tag is "RetentionPeriod" + the number of months eg.{"RetentionPeriod":24}          |
-| Description           | The system job completes with sub-documents store orders whose retention period has expired. Expiration occurs when the period between the Document date and Today is larger than the set retention period in months in field Job Configurations in the definition of the Job. By default the period is 24 months. It can be adjusted to the company's needs.|
+| Parameters            | Systems.Config.Jobs.JobConfigurations, <br/>where the tag is "RetentionPeriod" + number of months eg. {"RetentionPeriod":24} |
+| Description           | The system job completes with sub-documents store orders whose retention period has expired. Expiration occurs when the period between the Document date and Today is larger than the set retention period in months in field Job Configurations in the definition of the Job.|
 | First to process      | \-                                                          |
 | Automatically created | YES                                                         |
 | Version               | Introduced:                                                 |
