--- a/advanced/jobs/J38722.md
+++ b/advanced/jobs/J38722.md
@@ -9,7 +9,7 @@ items: Jobs
 | --------------------- | ------------------------------------------------------------|
 | Entity                | **Logistics.Inventory.StoreOrders Entity**                  |
 | Job type name         | Complete Old Store Orders                                   |
-| Parameters            | Systems.Config.Jobs.JobConfigurations <br/> in which to be inserted "RetentionPeriod" + number of months eg. {"RetentionPeriod":24} |
+| Parameters            | Systems.Config.Jobs.JobConfigurations <br/> in which is indicated "RetentionPeriod" + number of months eg. {"RetentionPeriod":24} |
 | Description           | The system job completes with sub-documents store orders whose retention period has expired. Expiration occurs when the period between the Document date and Today is larger than the set retention period in months in field Job Configurations in the definition of the Job.|
 | First to process      | \-                                                          |
 | Automatically created | YES                                                         |
