--- a/advanced/jobs/J38662.md
+++ b/advanced/jobs/J38662.md
@@ -9,15 +9,11 @@ items: Jobs
 | :-------------------- | ------------------------------------------------------------ |
 | Entity                | Finance.Accounting.AccountingVoucherLines                    |
 | Job type name         | Calculate historical reporting currency amounts              |
-| Parameters            | **EnterpriseCompany**<br/>Used for retrieving the exchange rate and the start date. <br/><br/>**ReportingCurrency**<br/><br/>Retrieved from EnterpriseCompany.ReportingCurrency.<br/><br/>**FromDate** (Optional, default is NULL)<br/>The starting date for processing. It is set within the task. If left empty, the processing begins from the oldest available documents.<br/><br/>**ToDate**<br/>Retrieved from EnterpriseCompany.ReportingCurrencyStartDate. If empty, no calculations are performed.<br/><br/>**ReportingCurrencyRate**<br/>Retrieved from EnterpriseCompany.ReportingCurrencyRate.<br/><br/>**LastProcessedDate**<br/>The last date up to which calculations have been completed. The value is retrieved and stored from **/Finance.Accounting/RCDate_EC{EnterpriseCompany.Id}**. |
+| Parameters            | **EnterpriseCompany**<br/>Used for retrieving the exchange rate and the start date. <br/><br/>**ReportingCurrency**<br/><br/>Retrieved from EnterpriseCompany.ReportingCurrency.<br/><br/>**FromDate** (Optional, default is NULL)<br/>The starting date for processing. It is set within the task. If left empty, the processing begins from the oldest available documents.<br/><br/>**ToDate**<br/>Retrieved from EnterpriseCompany.ReportingCurrencyStartDate. If empty, no calculations are performed.<br/><br/>**ReportingCurrencyRate**<br/>Retrieved from EnterpriseCompany.ReportingCurrencyRate.<br/><br/>**LastProcessedDate**<br/>The last date up to which calculations have been completed. The value is retrieved and stored from EnterpriseCompany.ReportingCurrencyProcessDate. |
 | Description           | ***Calculations Performed:***<br/>**ReportingCurrencyDebit = DebitBC * ReportingCurrencyRate<br/>ReportingCurrencyCredit = CreditBC * ReportingCurrencyRate<br/>**<br />***Execution Logic:***<br/>Processes only documents whose date is:<br/>Earlier than the **ToDate**<br/><br />If **LastProcessedDate** has a value → processes documents with a date greater than **LastProcessedDate**<br/>If **LastProcessedDate** is empty:<br/>If **FromDate** has a value → processing starts from the **FromDate**<br/>If **FromDate** is also empty → processing starts from the oldest document in the database<br /><br />The calculated values are stored in the fields:<br/><br/>**ReportingCurrencyDebit**<br/>**ReportingCurrencyCredit**<br/><br/>Upon successful execution, the job updates the **LastProcessedDate** with the last processed document date.<br/><br/>If **ToDate** is empty, the job does not make any changes. |
 | First to process      | N/A                                                          |
 | Automatically created | YES                                                          |
 | Version               | Introduced: v.25                                             |
-
-***/Finance.Accounting/RCDate_EC{EnterpriseCompany.Id}**  has different value for each   **EnterpriseCompany**
-
-*To learn more about the **/Finance.Accounting/RCDate_EC{EnterpriseCompany.Id}** key, see key №68 in [Config options](~/reference/config-options-reference.md).
 
 
 To learn more about the documentation template and get a short explanation for each table column, <br> see @template-description-jobs.
